--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <!--- basic page needs-->
         <meta charset="utf-8">
-        <title>Alexandru NITU Développeur web et applications</title>
+        <title>Alexandru NITU Développeur FullStack</title>
         <meta name="description" content="">  
         <meta name="author" content="">
 
