--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <!--- basic page needs-->
         <meta charset="utf-8">
-        <title>Alexandru NITU Développeur FullStack</title>
+        <title>Portfolio Alexandru NITU</title>
         <meta name="description" content="">  
         <meta name="author" content="">
 
@@ -30,8 +30,7 @@
                         <h5>Bonjour</h5>
                         <h1>Je m'appelle Alexandru Nitu</h1>
                         <p class="intro-position">
-                            <span>Développeur Web et applications</span>
-                            <span>UI/UX Designer</span> 
+                            <span>Développeur FullStack</span>                            
                         </p>
                         <a class="button stroke smoothscroll" href="#about" title="">À propos de moi</a>
                     </div>  
@@ -53,7 +52,7 @@
                     <h1>Petite introduction sur moi</h1>
                     <div class="intro-info">
                         <img src="images/profile-pic.png" alt="Profile Picture">
-                        <p class="lead">Bonjour, je suis un développeur Web débutant qui souhaite continuer son apprentissage dans le cadre d'un contract en alternance.</p>
+                        <p class="lead">Bonjour, je suis un développeur débutant qui souhaite continuer son apprentissage dans le cadre d'un contract en alternance.</p>
                     </div>   			
                 </div>   		
             </div> <!-- /section-intro -->
@@ -75,12 +74,8 @@
                         </li>
                         <li>
                             <strong>L'emploi:</strong>
-                            <span>Développeur Web et Applications</span>
-                        </li>
-                        <li>
-                            <strong>Site web:</strong>
-                            <span>www.alexandru-nitu.com</span>
-                        </li>
+                            <span>Développeur FullStack</span>
+                        </li>                       
                         <li>
                             <strong>Email:</strong>
                             <span>nitu.alex07@gmail.com</span>
@@ -157,6 +152,20 @@
                 </div> <!-- /resume-header -->
                 <div class="col-twelve">
                     <div class="timeline-wrap">
+                        <div class="timeline-block">
+                            <div class="timeline-ico">
+                                <i class="fa fa-briefcase"></i>
+                            </div>
+                            <div class="timeline-header">
+                                <h3>Développeur Web FullStack"</h3>
+                                <p>Nov. 2019 - Présent</p>
+                            </div>
+                            <div class="timeline-content">                               
+                                <h3>Informatique Plus @Work</h3>
+                                <p>Concevoir, organiser et développer des sites
+                                    web pour nos clients en utilisant PHP, MySql, Bootstrap, Simfony.</p>
+                            </div>
+                        </div>
                         <div class="timeline-block">
                             <div class="timeline-ico">
                                 <i class="fa fa-briefcase"></i>
