--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                                 <i class="fa fa-briefcase"></i>
                             </div>
                             <div class="timeline-header">
-                                <h3>Développeur Web FullStack"</h3>
+                                <h3>Développeur Web FullStack</h3>
                                 <p>Nov. 2019 - Présent</p>
                             </div>
                             <div class="timeline-content">                               
