--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
                             <div class="description-box">
                                 <h4>Site web en PHP</h4>		      
                                 <p>Concevoir, organiser et développer un site
-                                    web codé en PHP à l'aide d'une base de données MySQL.</p>
+                                    web codé en PHP et Bootstrap à l'aide d'une base de données MySQL.</p>
 
                                 <div class="categories">Développement Web</div>			               
                             </div>
@@ -411,8 +411,8 @@
                             </div>      	
                             <div class="description-box">
                                 <h4>Application Java</h4>		      
-                                <p>Mes tâches durant ce projet étaient de concevoir, organiser et développer une application en Java et Java EE à l'aide d'une base de données MySQL.</p>
-                                <div class="categories">Développement application Java et Java EE</div>			               
+                                <p>Mes tâches durant ce projet étaient de concevoir, organiser et développer une application en Java et Java J2EE à l'aide d'une base de données MySQL.</p>
+                                <div class="categories">Développement application Java et Java J2EE</div>			               
                             </div>
                             <div class="link-box">
                                 <a href="#" class="popup-modal-dismiss">Close</a>
@@ -470,13 +470,13 @@
                     </div> <!-- /service -->
 
                     <!-- /service -->
-                    <div class="service">
-                        <span class="icon"><i class="icon-toggles"></i></span>	              
-                        <div class="service-content">
-                            <h3>UI/UX Design</h3>
+                    <div class="service">	
+                        <span class="icon"><i class="icon-window"></i></span>                          
+                        <div class="service-content">	
+                            <h3>Développement Logiciels</h3>  
                             <p class="desc">
-                            </p> 
-                        </div>                
+                            </p>
+                        </div>	                          
                     </div> <!-- /service -->                          
                 </div> <!-- /services-list -->
             </div> <!-- /services-content -->
@@ -583,7 +583,7 @@
                                 <input name="contactSubject" type="text" id="contactSubject" placeholder="Sujet" value="">
                             </div>                       
                             <div class="form-field">
-                                <textarea name="contactMessage" id="contactMessage" placeholder="message" rows="10" cols="50" required=""></textarea>
+                                <textarea name="contactMessage" id="contactMessage" placeholder="Message" rows="10" cols="50" required=""></textarea>
                             </div>                      
                             <div class="form-field">
                                 <button class="submitform">Envoyer</button>
@@ -616,9 +616,9 @@
                     </div>
                     <h5>Ma adresse physique</h5>
                     <p>
-                        1400 rue Paul Rimbaud<br>
+                        231 rue Professeurs Truc<br>
                         Montpellier, France<br>
-                        34080 FR
+                        34090
                     </p>
 
                 </div>
