--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
                             <div class="description-box">
                                 <h4>Application Java</h4>		      
                                 <p>Mes tâches durant ce projet étaient de concevoir, organiser et développer une application en Java et Java J2EE à l'aide d'une base de données MySQL.</p>
-                                <div class="categories">Développement application Java et Java J2EE</div>			               
+                                <div class="categories">Développement d'une application Java et Java J2EE</div>			               
                             </div>
                             <div class="link-box">
                                 <a href="#" class="popup-modal-dismiss">Close</a>
