--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                                 <i class="fa fa-graduation-cap"></i>
                             </div>
                             <div class="timeline-header">
-                                <h3>BTS - Système Informatique aux Organisations</h3>
+                                <h3>BTS - SIO (Système Informatique aux Organisations)</h3>
                                 <p>Septembre 2018 - Juin 2019</p>
                             </div>
                             <div class="timeline-content">
@@ -276,7 +276,7 @@
                                 <p>2013</p>
                             </div>
                             <div class="timeline-content">
-                                <h3>Lycée théorétique “Dimitrie Bolintineanu” Bucarest, Roumanie</h3>
+                                <h3>Lycée théorétique “Dimitrie Bolintineanu”</h3>
                                 <p>Depuis toujours, je suis passionné de mathématiques et d’informatique et donc la filière scientifique c'était un choix basé sur mes affinités.</p>
                             </div>
                         </div> <!-- /timeline-block -->
@@ -348,7 +348,7 @@
                                         <div class="folio-item-cell">
                                             <h3 class="folio-title">Application Java</h3>	     					    
                                             <span class="folio-types">
-                                                Développement d'une application codé en JavaEE.
+                                                Développement d'une application codé en Java J2EE.
                                             </span>		     		
                                         </div> 	                      	
                                     </div>                    
