--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
                         <li>
                             <strong>Langues:</strong>
                             <span>Roumain: langue maternelle;</span>
-                            <span>Anglais: niveau C2;</span>
+                            <span>Anglais: niveau C1;</span>
                             <span>Français: niveau B2;</span>
-                            <span>Espagnol: niveau A1;</span>
+                            <span>Italien: niveau A1;</span>
                         </li>
                     </ul> <!-- /info-list -->
                 </div>
